# subtitle-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
subtitle_studio/: __init__.py  cli.py  models.py  pipeline.py
subtitle_studio/data/: branding.yaml.example
subtitle_studio/detect/: coherence.py  cps_autofix.py  detector.py  duration_autofix.py  guidelines.py  models.py  srt_parser.py
subtitle_studio/generate/: audio.py  sentence_merger.py  subtitle.py  transcribe.py  transcribe_cloud.py
subtitle_studio/translate/: translate.py
tests/: test_cli.py  test_pipeline.py
tests/detect/: conftest.py  test_cps_autofix.py  test_detector.py  test_duration_autofix.py  test_srt_parser.py
tests/generate/: test_sentence_merger.py  test_subtitle.py  test_transcribe.py
tests/translate/: test_translate.py
